<resources>
    <!--General-->
    <string name="app_name">SOPS</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="input_fields_empty">some fields are empty</string>
    <string name="internal_error_message">something went wrong :(</string>
    <string name="no_data">no data</string>
    <string name="role_user">User</string>
    <string name="role_employee">Employee</string>

    <!--Activity Title-->
    <string name="activity_title_login">Login</string>
    <string name="activity_title_home">Home</string>
    <string name="activity_title_profile">Profile</string>
    <string name="activity_title_scan">Scan</string>
    <string name="activity_title_company_product_details">Details</string>
    <string name="activity_title_products">Products</string>
    <string name="activity_title_products_company_products">Company Products</string>

    <!--Shared Preferences-->
    <string name="shared_prefs_file_user">sops.user</string>
    <string name="shared_prefs_token_key">token</string>
    <string name="shared_prefs_token_default">null</string>
    <string name="shared_prefs_user_id_key">userId</string>
    <string name="shared_prefs_user_id_default">null</string>
    <string name="shared_prefs_company_id_key">companyId</string>
    <string name="shared_prefs_company_id_default">null</string>

    <!--Login-->
    <string name="login_app_title">$OP$</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_response_unsuccessful">login or password incorrect</string>
    <string name="login_login_button_text">Login</string>

    <!--Home-->
    <string name="home_profile_action_title">Profile</string>
    <string name="home_logout_action_title">Layout</string>
    <string name="home_company_action_title">Company</string>
    <string name="home_scan_action_title">Scan</string>
    <string name="home_my_products_action_title">My Products</string>
    <string name="home_products_action_title">Products</string>

    <!--Profile-->
    <string name="profile_username_label">Username</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_surname_label">Surname</string>
    <string name="profile_phone_label">Phone number</string>

    <!--Company-->
    <string name="title_activity_company">Company</string>
    <string name="company_new_product_added">new product added</string>
    <string name="company_new_add_photo">Add photo</string>
    <string name="company_new_product_name_label">Product name</string>
    <string name="company_new_product_expiration_label">Expiration in months</string>
    <string name="company_new_product_country_label">Country of origin</string>
    <string name="company_new_product_price_label">Price</string>
    <string name="company_new_product_save_button">save</string>
    <string name="company_new_tab_name">New</string>
    <string name="company_list_tab_name">List</string>

    <!--Product Details-->
    <string name="product_details_product_name_label">Product Name</string>
    <string name="product_details_product_description_label">Description</string>
    <string name="product_details_product_price_label">Price</string>
    <string name="product_details_product_barcode_label">Barcode</string>
    <string name="product_details_product_country_label">Made in</string>

    <!--Company Details-->
    <string name="company_details_company_name_label">Company Name</string>
    <string name="company_details_company_address_city_label">Address City</string>
    <string name="company_details_company_nip_label">NIP</string>
    <string name="company_details_company_kind_label">Kind</string>
    <string name="company_details_company_join_date_label">Join Date</string>

    <!--TODO: replace that-->
    <string name="tab_text_1">Watched</string>
    <string name="tab_text_2">Scanned</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_products">My Products</string>
</resources>
