<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.company.CompanyProfileNewFragment"
    android:id="@+id/company_new_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/company_new_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_insert_photo_24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>

    <Button
        android:id="@+id/company_new_take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/company_new_form"
        app:layout_constraintLeft_toRightOf="@id/company_new_image_view"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="#EEEEEE"
        android:drawableLeft="@drawable/ic_add_a_photo_24dp"
        android:text="@string/company_new_add_photo"/>

    <LinearLayout
        android:id="@+id/company_new_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/company_new_image_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/text_margin">

        <EditText
            android:id="@+id/company_new_product_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_new_image_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/company_new_product_name_label"/>

        <EditText
            android:id="@+id/company_new_product_expiration_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_new_product_name_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/company_new_product_expiration_label"/>

        <EditText
            android:id="@+id/company_new_product_country_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_new_product_expiration_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/company_new_product_country_label"/>

        <EditText
            android:id="@+id/company_new_product_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_new_product_country_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/company_new_product_price_label"/>

        <Button
            android:id="@+id/company_new_product_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_new_product_price_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:backgroundTint="#EEEEEE"
            android:text="@string/company_new_product_save_button"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>