<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.home.HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/home_layout_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleX="1.5"
        android:scaleY="1"
        android:background="@drawable/background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow android:layout_weight="0.33">
            <FrameLayout
                android:id="@+id/home_profile_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_home_profile_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_profile_action_title"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/home_logout_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_home_logout_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_logout_action_title"/>
            </FrameLayout>
        </TableRow>

        <TableRow android:layout_weight="0.33">
            <FrameLayout
                android:id="@+id/home_company_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:background="@drawable/ic_home_company_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_company_action_title"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/home_scan_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:background="@drawable/ic_home_scan_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_scan_action_title"/>
            </FrameLayout>
        </TableRow>

        <TableRow android:layout_weight="0.33">
            <FrameLayout
                android:id="@+id/home_my_products_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/ic_my_products_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_my_products_action_title"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/home_products_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorHomeActionBackground">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/ic_products_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/home_products_action_title"/>
            </FrameLayout>
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
